# django-2024

./: pyproject.toml
config/: settings.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_alter_like_user_alter_tweet_user.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
